more alignment issues

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -42,7 +42,7 @@
     }
     h2 {
         color: $secondaryColour;
-        margin-bottom: 0;
+        
     }
     img {
         display: block;
@@ -74,15 +74,24 @@
     align-items: center;
 }
 
+.question__container {
+    justify-content: center;
+}
+
+h2 {
+    margin-bottom: 0;
+}
+
 /* QUESTION #1 ====================== */
 
 .questionOne {
     padding: 40px 100px;
+    position: relative;
     .question__progressbar {
         display: flex;
         position: absolute;
         // top: 50px;
-        // // right: 331px;
+        // right: 331px;
         // left: 50px;
         top: 27px;
         right: 341px;
@@ -106,7 +115,6 @@
             }
         }
         .question__image {
-            // position:relative;
             display: flex;
             align-items: center;
         }
@@ -150,8 +158,8 @@
         // justify-content: space-between;
         .question__options {
             width: 50%;
-            margin-left: 50px;
-            margin-top: 100px;
+            // margin-left: 50px;
+            // margin-top: 100px;
             button {
                 background: none;
                 color: white;
@@ -164,7 +172,6 @@
             }
         }
         .question__image {
-            // position:relative;
             display: flex;
             align-items: center;
             img {
@@ -208,9 +215,9 @@
         display: flex;
         // justify-content: space-between;
         .question__options {
-            width: 80%;
-            margin-left: 50px;
-            margin-top: 100px;
+            width: 50%;
+            // margin-left: 50px;
+            // margin-top: 100px;
             button {
                 background: none;
                 color: white;
@@ -223,7 +230,6 @@
             }
         }
         .question__image {
-            // position:relative;
             display: flex;
             align-items: center;
             img {
@@ -269,9 +275,9 @@
         // justify-content: space-between;
         .question__options {
             width: 50%;
-            margin-left: 50px;
+            // margin-left: 50px;
             // margin-top: 100px;
-            margin-top: 50px;
+            // margin-top: 50px;
             button {
                 background: none;
                 color: white;
@@ -284,7 +290,6 @@
             }
         }
         .question__image {
-            // position:relative;
             display: flex;
             align-items: center;
         }
@@ -326,8 +331,8 @@
         // justify-content: space-between;
         .question__options {
             width: 50%;
-            margin-left: 50px;
-            margin-top: 100px;
+            // margin-left: 50px;
+            // margin-top: 100px;
             button {
                 background: none;
                 color: white;
@@ -340,7 +345,6 @@
             }
         }
         .question__image {
-            // position:relative;
             display: flex;
             align-items: center;
             img {
